Transform Constraint Doesn't Obey World/World Setting (Inherits from Parent instead!) #40269

Closed
opened 2014-05-20 02:04:10 +02:00 by bassam kurdali · 12 comments
Member

System Information
GNU Linux 64 bit (Fedora 20) Intel CPU, Nvidia GPU

Blender Version
Broken: (example: 2.70.5 Hash 0d9e6a7)
Worked: (2.70a release)

Short description of error
Transform Constraint - specifically here in Scale to Scale in World/World mode used to override inherited scale from parent; now it applies on top breaking multiple rigs
In the shown example, the parent bone has been scaled down. note the difference in 2.70a and Master.transform_constraint.png
Exact steps for others to reproduce the error
Due to other compatiblity changes, that broke forward compatibility, I've uploaded two files:
A file for 2.70a{F89471}
And a file for Master transform_new.blend
Open transform.blend in 2.7a, note the constraint settings, and that the parent bone is scaled down
Open transform_new.blend in master, note it is exactly the same settings/setup (you can even open transform.blend but not vice versa) and that it looks totally different.

Finally:
This is the rig I had to debug this in!
hands.png

**System Information** GNU Linux 64 bit (Fedora 20) Intel CPU, Nvidia GPU **Blender Version** Broken: (example: 2.70.5 Hash 0d9e6a7) Worked: (2.70a release) **Short description of error** Transform Constraint - specifically here in Scale to Scale in World/World mode used to override inherited scale from parent; now it applies on top breaking multiple rigs In the shown example, the parent bone has been scaled down. note the difference in 2.70a and Master.![transform_constraint.png](https://archive.blender.org/developer/F89469/transform_constraint.png) **Exact steps for others to reproduce the error** Due to other compatiblity changes, that broke forward compatibility, I've uploaded two files: A file for 2.70a{[F89471](https://archive.blender.org/developer/F89471/transform.blend)} And a file for Master [transform_new.blend](https://archive.blender.org/developer/F89472/transform_new.blend) Open transform.blend in 2.7a, note the constraint settings, and that the parent bone is scaled down Open transform_new.blend in master, note it is exactly the same settings/setup (you can even open transform.blend but not vice versa) and that it looks totally different. Finally: This is the rig I had to debug this in! ![hands.png](https://archive.blender.org/developer/F89473/hands.png)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali
Author
Member

reuploading transform.blend
transform.blend

reuploading transform.blend [transform.blend](https://archive.blender.org/developer/F89475/transform.blend)

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2014-05-20 08:35:03 +02:00

Grmll, I guess this one is for me again…

Grmll, I guess this one is for me again…

(No need for two different files here, btw, issues only happen when using rotation in Transform constraint ;) ).

(No need for two different files here, btw, issues only happen when using rotation in Transform constraint ;) ).

Ok, so issue is (again) introduced by 8714ae09f8 (while working on this constraint, I discovered that scale, unlike rotation or location, was completely replaced by this Transform constraint, and since I saw no good reason for this, I “stupidly” made it relative to org scale, like the others).

In absolute, this is good, but since it again breaks existing rigs… Will just revert, not worth adding an option to decide whether constraint is absolute or relative for scale, imho, that Transform already has way too much options.

Ok, so issue is (again) introduced by 8714ae09f8 (while working on this constraint, I discovered that scale, unlike rotation or location, was completely replaced by this Transform constraint, and since I saw no good reason for this, I “stupidly” made it relative to org scale, like the others). In absolute, this is good, but since it again breaks existing rigs… Will just revert, not worth adding an option to decide whether constraint is absolute or relative for scale, imho, that Transform already has way too much options.

This issue was referenced by 3bba558944

This issue was referenced by 3bba558944a280daa4b1dbb027b65583dfe0f7fe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3bba558944.

Closed by commit 3bba558944.
Author
Member

Thanks Bastien!
In general it is better to keep bugs / inconsistencies in the current constraints unless there is a consensis by riggers that something has to be changed, otherwise, it just introduces incompatibilities

I think we could design a better constraint/transform system, especially after Lukas' new work on dependency graphs that could accomplish many cool things (optionally) such as:
1- Nodal Workflow/Design
2- Simplify indivudual constraint/ node options reducing complexity/bugs
3- Allow transform nodes which could replace complex and buggy 'offset' options in constraints
4- '3' also allows more flexible ordering of operations (currently we are very hardcoded in which order transform/constraint is evaluated)
5- ?? insert cool idea here :)

Current system is a bit too hackish/overloaded with options and tends to break rigs very easily on changes. It would be really cool to have a more robust system allowing rig assets to have more longevity.

Thanks Bastien! In general it is better to keep bugs / inconsistencies in the current constraints unless there is a consensis by riggers that something has to be changed, otherwise, it just introduces incompatibilities I think we could design a better constraint/transform system, especially after Lukas' new work on dependency graphs that could accomplish many cool things (optionally) such as: 1- Nodal Workflow/Design 2- Simplify indivudual constraint/ node options reducing complexity/bugs 3- Allow transform nodes which could replace complex and buggy 'offset' options in constraints 4- '3' also allows more flexible ordering of operations (currently we are very hardcoded in which order transform/constraint is evaluated) 5- ?? insert cool idea here :) Current system is a bit too hackish/overloaded with options and tends to break rigs very easily on changes. It would be really cool to have a more robust system allowing rig assets to have more longevity.

Yes, agree, current system has way too much issues (also, e.g. the fact that each constraint is always evaluated against org matrix of the object, not previous constraint result - what the meaning of having a stack, in this case?), the fact that it only uses matrix, which has some serious limitations at least on rotations, etc. etc. So new design is for sure needed!

Yes, agree, current system has way too much issues (also, e.g. the fact that each constraint is always evaluated against org matrix of the object, not previous constraint result - what the meaning of having a stack, in this case?), the fact that it only uses matrix, which has some serious limitations at least on rotations, etc. etc. So new design is for sure needed!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40269
No description provided.