Fix T40269: Transform Constraint Doesn't Obey World/World Setting (Inherits from Parent instead!)

Revert small part of own rB8714ae09f894, which changed scale setting from absolute to relative
(was good in absolute, but bad because it breaks existing rigs).